# aglet-plugins

./: .gitignore  README.md  build.zig  build.zig.zon
.github/workflows/: publish.yml  validate.yml
archive/: CMakeLists.txt  plugin.json
archive/src/: wrapper.cpp
barcode/: CMakeLists.txt  build.sh  plugin.json  plugin.zig
barcode/src/: wrapper.cpp
crypto/: plugin.json
crypto/src/: wrapper.zig
highlight/: aplugin.json
image/: CMakeLists.txt  build.sh  plugin.json  plugin.zig
image/src/: wrapper.cpp
markdown/: CMakeLists.txt  aplugin.json
markdown/src/: wrapper.cpp
scripts/: fetch-deps.sh
sdk/: README.md  plugin.schema.json
sdk/templates/cpp/: plugin.json
sdk/templates/zig/: plugin.json
sdk/zig/: plugin.zig
sysmon/: aplugin.json  plugin.json
sysmon/src/: main.zig
tokstat/: aplugin.json  plugin.json
tokstat/src/: main.zig
